--- a/Discord/discord.desktop
+++ b/Discord/discord.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=QDC
+Name=QDiscord
 StartupWMClass=discord
 Comment=All-in-one voice and text chat for gamers that's free, secure, and works on both your desktop and phone.
 GenericName=Internet Messenger
